# DescriptorFactory

./: .gitignore  ADDINGDESC.md  CMakeLists.txt  CMakeLists.txt.MacOS  CMakeLists.txt.bak  INSTALL.py  README.md
include/: descriptors.hpp  io.hpp  utils.hpp
include/descriptors/: counts.hpp  eigen.hpp  eigen_detail.hpp  electronic.hpp  element_properties.hpp  fractional.hpp  image.hpp  morgan.hpp  pka.hpp  rdkit.hpp  selfies.hpp  solubility.hpp  strings.hpp  sum.hpp  vague3.hpp  vague4.hpp  vague5.hpp  vague6.hpp  vague7.hpp  vague8.hpp
input/: sample_smiles.csv
src/: descriptors.cpp  io.cpp  main.cpp  utils.cpp
src/descriptors/: counts.cpp  eigen.cpp  electronic.cpp  fractional.cpp  image.cpp  morgan.cpp  pka.cpp  rdkit.cpp  selfies.cpp  solubility.cpp  strings.cpp  sum.cpp  vague3.cpp  vague4.cpp  vague5.cpp  vague6.cpp  vague7.cpp  vague8.cpp
src/gui/: gui_main.cpp  mainwindow.cpp  mainwindow.h
tests/: tests_csv.py
